--- a/styles.css
+++ b/styles.css
@@ -358,6 +358,84 @@ body,
     text-align: start;
 }
 
+/* Resons section styles */
+.section-reasons {
+    text-align: center;
+    background-color: #fff;
+    padding: 100px 110px 90px;
+    max-width: 768px;
+}
+
+.section-reasons h2 {
+    color: #000;
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 74px;
+    letter-spacing: 0px;
+    text-align: center;
+    max-width: 90%;
+    margin: 0px;
+    margin-bottom: 50px;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.card {
+    transition: transform 0.3s;
+    margin: 0 0 10px;
+    padding: 35px 10px 30px;
+    background-color: transparent;
+    background-image: linear-gradient(360deg, #ff4954 0%, #f2295b 100%);
+    border-radius: 20px;
+    width: 50%;
+    transition: all 0.5s ease-in-out;
+}
+
+.card:hover {
+    transform: translateY(-10px);
+}
+
+.card-icon img {
+    width: 120px;
+    height: 120px;
+    margin-bottom: 15px;
+}
+
+.card h3 {
+    color: #fff;
+    font-family: "Poppins", Sans-serif;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 44px;
+    letter-spacing: 0px;
+    margin: 0px;
+}
+
+.card p {
+    color: #fff;
+    font-family: "Poppins", Sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+}
+
+@media (max-width: 768px) {
+    .cards-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card {
+        width: 100%;
+        max-width: 350px;
+    }
+}
+
+
 @keyframes fadeInOut {
 
     0%,
