--- a/styles.css
+++ b/styles.css
@@ -343,7 +343,7 @@ body,
     position: fixed;
     top: 20px;
     right: 20px;
-    z-index: 100;
+    z-index: 999999999999999;
 }
 
 .toast.show {
