--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body,
     padding: 50px 110px 110px;
     background-color: transparent;
     background-image: linear-gradient(360deg, #ff4954 0%, #f2295b 100%);
-    min-height: calc(100vh - 160px);
 }
 
 .logo {
@@ -459,6 +458,87 @@ body,
 .fade-in-section.visible {
     opacity: 1;
     transform: translateY(0);
+}
+
+/* Integrates section styles */
+.integrates-main {
+    max-width: 1300px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 90px 20px 94px 20px;
+}
+
+.integrates-main p {
+    text-align: left;
+    color: #554f67;
+    font-family: 'Poppins', Sans-serif;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 38px;
+}
+
+/* Earning section styles */
+.earning-main {
+    background-color: transparent;
+    background-image: linear-gradient(180deg, #ff4954 0%, #f2295b 100%);
+}
+
+.earning-section {
+    max-width: 1300px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 40px 20px 44px 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 46px;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.earning-section p {
+    max-width: 540px;
+    font-family: 'Poppins', Sans-serif;
+    font-size: 46px;
+    font-weight: 400;
+    line-height: 68px;
+    color: #fff;
+    letter-spacing: 0px;
+}
+
+.earning-section p span {
+    font-weight: 700;
+}
+
+/* Footer styles */
+.footer-main {
+    max-width: 1300px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 44px 20px 76px 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-main p {
+    font-family: 'Poppins', Sans-serif;
+    color: #383838;
+    font-size: 22px;
+    line-height: 33px;
+    font-weight: 400;
+}
+
+.footer-main button {
+    font-family: 'Poppins', Sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 33px;
+    fill: #383838;
+    color: #383838;
+    background-color: #ffffff00;
+    padding: 0;
+    border: none;
 }
 
 /* Animations */
