--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body,
 
 .facilities_main_wrapper {
     color: #fff;
-    font-family: "Poppins", Sans-serif;
+    font-family: 'Poppins', Sans-serif;
     font-size: 24px;
     font-weight: 400;
     text-transform: none;
@@ -78,7 +78,6 @@ body,
     object-fit: contain;
 }
 
-
 /* Membership & Accolades Section styles */
 .membership-section {
     width: 80%;
@@ -93,7 +92,7 @@ body,
     margin-bottom: 40px;
     text-align: left;
     color: #554f67;
-    font-family: "Poppins", Sans-serif;
+    font-family: 'Poppins', Sans-serif;
     font-size: 28px;
     font-weight: 500;
     line-height: 38px;
@@ -171,7 +170,7 @@ body,
     line-height: 62px;
     margin-right: 10px;
     background: #fff;
-    font-family: "Poppins", Sans-serif;
+    font-family: 'Poppins', Sans-serif;
     font-size: 36px;
     margin-top: -10px;
     color: #ff4954;
@@ -179,7 +178,7 @@ body,
 
 .feature-heading {
     color: #ff4954;
-    font-family: "Poppins", Sans-serif;
+    font-family: 'Poppins', Sans-serif;
     font-size: 36px;
     font-weight: 600;
     text-transform: none;
@@ -191,7 +190,7 @@ body,
 
 .feature-text {
     color: #000;
-    font-family: "Poppins", Sans-serif;
+    font-family: 'Poppins', Sans-serif;
     font-size: 24px;
     font-weight: 400;
     line-height: 36px;
@@ -259,11 +258,12 @@ body,
 #demoForm {
     display: flex;
     flex-direction: column;
+    width: 100%;
     gap: 20px;
 }
 
 #demoForm h2 {
-    color: #FF4A55;
+    color: #ff4a55;
 }
 
 #demoForm p {
@@ -283,21 +283,22 @@ body,
 
 #demoForm input,
 #demoForm select {
-    width: 100%;
+    width: 100% !important;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 14px;
+    max-width: 397px !important;
 }
 
 #demoForm input:focus,
 #demoForm select:focus {
-    border-color: #FF4A55;
+    border-color: #ff4a55;
     outline: none;
 }
 
 #demoForm button {
-    background-color: #FF4A55;
+    background-color: #ff4a55;
     color: white;
     border: none;
     padding: 12px;
@@ -316,7 +317,7 @@ body,
 }
 
 .phone-input select {
-    width: 130px !important;
+    max-width: 130px !important;
     margin-right: 10px;
 }
 
@@ -327,7 +328,7 @@ body,
 }
 
 .terms a {
-    color: #FF4A55;
+    color: #ff4a55;
     text-decoration: none;
 }
 
@@ -406,7 +407,7 @@ body,
 
 .card h3 {
     color: #fff;
-    font-family: "Poppins", Sans-serif;
+    font-family: 'Poppins', Sans-serif;
     font-size: 30px;
     font-weight: 600;
     line-height: 44px;
@@ -416,7 +417,7 @@ body,
 
 .card p {
     color: #fff;
-    font-family: "Poppins", Sans-serif;
+    font-family: 'Poppins', Sans-serif;
     font-size: 24px;
     font-weight: 400;
     line-height: 36px;
@@ -433,7 +434,6 @@ body,
         max-width: 350px;
     }
 }
-
 
 @keyframes fadeInOut {
 
@@ -484,13 +484,12 @@ body,
 }
 
 .earning-section {
-    max-width: 1300px;
     width: 100%;
     margin: 0 auto;
-    padding: 40px 20px 44px 20px;
+    padding: 40px 110px 44px;
     display: flex;
     flex-direction: row;
-    gap: 46px;
+    gap: 100px;
     justify-content: flex-start;
     align-items: center;
 }
@@ -511,10 +510,9 @@ body,
 
 /* Footer styles */
 .footer-main {
-    max-width: 1300px;
     width: 100%;
     margin: 0 auto;
-    padding: 44px 20px 76px 20px;
+    padding: 44px 110px 76px 110px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
